--- a/index.html
+++ b/index.html
@@ -37,10 +37,13 @@
     <br />
     <h1 class="robt">Hello my name is Cátia, this is a teste</h1>
 
-    <i class="fab fa-instagram"></i>
-    <i class="fab fa-instagram-square"></i>
-    <i class="fab fa-facebook"></i>
-    <i class="fab fa-facebook-messenger"></i>
-    <i class="far fa-sun"></i>
+    <div class="fa-3x">
+      <i class="fab fa-instagram"></i>
+      <i class="fab fa-instagram-square"></i>
+      <i class="fab fa-facebook"></i>
+      <i class="fab fa-facebook-messenger"></i>
+      <i class="far fa-sun"></i>
+      <i class="fab fa-instagram fa-spin"></i>
+    </div>
   </body>
 </html>
