--- a/index.html
+++ b/index.html
@@ -32,19 +32,11 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <h1 class="text-center">Hello</h1>
-    <h1 class="pop">Hello my name is Cátia, this is a teste</h1>
-    <br />
-    <br />
-    <h1 class="robt">Hello my name is Cátia, this is a teste</h1>
-
-    <div class="fa-3x">
-      <i class="fab fa-instagram"></i>
-      <i class="fab fa-instagram-square"></i>
-      <i class="fab fa-facebook"></i>
-      <i class="fab fa-facebook-messenger"></i>
-      <i class="far fa-sun"></i>
-      <i class="fab fa-instagram fa-spin"></i>
+    <div class="hero">
+      <p>🖖 Hello, I am</p>
+      <h1>Cátia Barroco</h1>
+      <h2 class="mb-5">Front-end developer based in Portugal</h2>
+      <div><a href="#" class="btn btn-branding">Contact me</a></div>
     </div>
   </body>
 </html>
