--- a/index.html
+++ b/index.html
@@ -38,5 +38,58 @@
       <h2 class="mb-5">Front-end developer based in Portugal</h2>
       <div><a href="#" class="btn btn-branding">Contact me</a></div>
     </div>
+    <p class="text-center m-5">
+      Featured Project which my best projects be choice to show
+    </p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/yogurtapp.png" alt="Yogurt aplication" class="img-fluid">
+        </div>
+        <div class="col project-description">
+          <h2 class="mb-4">Yogurt Project</h2>
+          <p class="mb-5 opacity-75">
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
+          </p>
+          <a href="#" class="btn btn-branding-outline">Learn more</a>
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        
+        <div class="col project-description">
+          <h2 class="mb-4">Weather App</h2>
+          <p class="mb-5 opacity-75">
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
+          </p>
+          <a href="#" class="btn btn-branding-outline">Learn more</a>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/weatherapp.png" alt="Weather aplication" class="img-fluid">
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/dictionaryapp.png" alt="Disctionary aplication" class="img-fluid">
+        </div>
+        <div class="col project-description">
+          <h2 class="mb-4">Dictionary App</h2>
+          <p class="mb-5 opacity-75">
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
+          </p>
+          <a href="#" class="btn btn-branding-outline">Learn more</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
