--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;500;700&family=Playfair+Display:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -37,7 +37,7 @@
       <p>🖖 Hello, I am</p>
       <h1>Cátia Barroco</h1>
       <h2 class="mb-5">Front-end developer based in Portugal</h2>
-      <div><a href="#" class="btn btn-branding">Contact me</a></div>
+      <div><a href="about.html" class="btn btn-branding">Contact me</a></div>
     </div>
     <p class="text-center m-5">
       Featured Project which my best projects be choice to show
@@ -45,7 +45,11 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/yogurtapp.png" alt="Yogurt aplication" class="img-fluid">
+          <img
+            src="images/yogurtapp.png"
+            alt="Yogurt aplication"
+            class="img-fluid"
+          />
         </div>
         <div class="col project-description">
           <h2 class="mb-4">Yogurt Project</h2>
@@ -60,7 +64,6 @@
       </div>
 
       <div class="row mb-5">
-        
         <div class="col project-description">
           <h2 class="mb-4">Weather App</h2>
           <p class="mb-5 opacity-75">
@@ -72,13 +75,21 @@
           <a href="#" class="btn btn-branding-outline">Learn more</a>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/weatherapp.png" alt="Weather aplication" class="img-fluid">
+          <img
+            src="images/weatherapp.png"
+            alt="Weather aplication"
+            class="img-fluid"
+          />
         </div>
       </div>
 
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/dictionaryapp.png" alt="Disctionary aplication" class="img-fluid">
+          <img
+            src="images/dictionaryapp.png"
+            alt="Disctionary aplication"
+            class="img-fluid"
+          />
         </div>
         <div class="col project-description">
           <h2 class="mb-4">Dictionary App</h2>
