added work page

--- a/about.html
+++ b/about.html
@@ -32,18 +32,20 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <div class="about-section container">
+    <div class="content-container container">
       <div class="row">
-        <div class="col-md-6 about-section-content">
-          <h1>Hi I am Patricia Pereira</h1>
-          <h2>Frontend Developer, based in Portugal.</h2>
-          <p class="mb-5">
-            For anyone who wants to start learning code, this workshop is very
-            interesting. You will be challenged with different exercises, and
-            everything is well explained, homework and deadlines are good for
-            keep focus
-          </p>
-          <a href="#" class="btn btn-branding">See my projects</a>
+        <div class="col-md-6">
+          <div class="content">
+              <h1>Hi I am Patricia Pereira</h1>
+              <h2>Frontend Developer, based in Portugal.</h2>
+              <p class="mb-5">
+                For anyone who wants to start learning code, this workshop is very
+                interesting. You will be challenged with different exercises, and
+                everything is well explained, homework and deadlines are good for
+                keep focus
+              </p>
+              <a href="#" class="btn btn-branding">See my projects</a>
+          </div>
         </div>
 
         <div class="col-md-6">
