--- a/contact.html
+++ b/contact.html
@@ -36,11 +36,11 @@
       <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
-        <p><a href="mailto:patricia@gmail.com">patricia@gmail.com</a></p>
+        <p><a href="mailto:patricia@gmail.com" class="contact-link">patricia@gmail.com</a></p>
         <h3>Twitter</h3>
-        <p><a href="#">@patricia</a></p>
+        <p><a href="#"class="contact-link">@patricia</a></p>
         <h3>Instagram</h3>
-        <p><a href="#">@patricia.codes</a></p>
+        <p><a href="#" class="contact-link">@patricia.codes</a></p>
       </div>
     </div>
   </body>
