--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <body>
     <div class="hero">
       <p>🖖 Hello, I am</p>
-      <h1>Cátia Barroco</h1>
+      <h1>Patricia Pereira</h1>
       <h2 class="mb-5">Front-end developer based in Portugal</h2>
       <div><a href="about.html" class="btn btn-branding">Contact me</a></div>
     </div>
