--- a/about.html
+++ b/about.html
@@ -32,19 +32,62 @@
     <title>Portfolio</title>
   </head>
   <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-light"
+      style="background-color: white"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/logo.png" alt="" class="logo d-none d-md-block" />
+          <img
+            src="images/small'logo.jpg"
+            alt=""
+            class="logo-small d-block d-md-none"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-item nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link active" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link" href="work.html">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link" href="contact.html">Contacts</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <div class="content-container container">
       <div class="row">
         <div class="col-md-6">
           <div class="content">
-              <h1>Hi I am Patricia Pereira</h1>
-              <h2>Frontend Developer, based in Portugal.</h2>
-              <p class="mb-5">
-                For anyone who wants to start learning code, this workshop is very
-                interesting. You will be challenged with different exercises, and
-                everything is well explained, homework and deadlines are good for
-                keep focus
-              </p>
-              <a href="#" class="btn btn-branding">See my projects</a>
+            <h1>Hi I am Patricia Pereira</h1>
+            <h2>Frontend Developer, based in Portugal.</h2>
+            <p class="mb-5">
+              For anyone who wants to start learning code, this workshop is very
+              interesting. You will be challenged with different exercises, and
+              everything is well explained, homework and deadlines are good for
+              keep focus
+            </p>
+            <a href="#" class="btn btn-branding">See my projects</a>
           </div>
         </div>
 
