--- a/contact.html
+++ b/contact.html
@@ -32,13 +32,62 @@
     <title>Portfolio</title>
   </head>
   <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-light"
+      style="background-color: white"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/logo.png" alt="" class="logo d-none d-md-block" />
+          <img
+            src="images/small'logo.jpg"
+            alt=""
+            class="logo-small d-block d-md-none"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-item nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link" href="work.html">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link active" href="contact.html"
+                >Contacts</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
-        <p><a href="mailto:patricia@gmail.com" class="contact-link">patricia@gmail.com</a></p>
+        <p>
+          <a href="mailto:patricia@gmail.com" class="contact-link"
+            >patricia@gmail.com</a
+          >
+        </p>
         <h3>Twitter</h3>
-        <p><a href="#"class="contact-link">@patricia</a></p>
+        <p><a href="#" class="contact-link">@patricia</a></p>
         <h3>Instagram</h3>
         <p><a href="#" class="contact-link">@patricia.codes</a></p>
       </div>
