--- a/index.html
+++ b/index.html
@@ -33,6 +33,49 @@
     <title>Portfolio</title>
   </head>
   <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-light"
+      style="background-color: #f9f7fe"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/logo.png" alt="" class="logo d-none d-md-block" />
+          <img
+            src="images/small'logo.jpg"
+            alt=""
+            class="logo-small d-block d-md-none"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-item nav-link active" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link" href="work.html">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link" href="contact.html">Contacts</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <div class="hero">
       <p>🖖 Hello, I am</p>
       <h1>Patricia Pereira</h1>
