--- a/work.html
+++ b/work.html
@@ -32,6 +32,49 @@
     <title>Portfolio</title>
   </head>
   <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-light"
+      style="background-color: white"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/logo.png" alt="" class="logo d-none d-md-block" />
+          <img
+            src="images/small'logo.jpg"
+            alt=""
+            class="logo-small d-block d-md-none"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-item nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link active" href="work.html">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link" href="contact.html">Contacts</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
@@ -53,7 +96,9 @@
               class="img-fluid rounded"
             />
             <h3 class="text-center">Weather App</h3>
-            <p class="text-center opacity-75">Build with HTML, CSS and JavaScript</p>
+            <p class="text-center opacity-75">
+              Build with HTML, CSS and JavaScript
+            </p>
           </div>
 
           <div class="col-md-6 mb-5">
