--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div
+          class="collapse navbar-collapse flex-grow-0"
+          id="navbarSupportedContent"
+        >
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-item nav-link active" href="index.html">Home</a>
@@ -145,6 +148,35 @@
           <a href="#" class="btn btn-branding-outline">Learn more</a>
         </div>
       </div>
+
+      <footer>
+
+        <div class="contact-box row mb-5">
+          <div class="col">
+            <h4>Work Inquiry</h4>
+            <p class="opacity-75">Let's work together</p>
+          </div>
+          <div class="col"><a href="" class="btn btn-branding">Let’s talk here</a></div>
+        </div>
+
+        <div class="d-flex justify-content-center">
+          <a href="mailto:patricia@gmail.com" class="email-link">
+            patricia@gmail.com
+          </a>
+        </div>
+
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://www.instagram.com/patricia" target="_blank">
+            <i class="fab fa-instagram"></i
+          ></a>
+          <a href="https://www.github.com/patricia" target="_blank">
+            <i class="fab fa-github"></i
+          ></a>
+          <a href="https://www.facebook.com/patricia" target="_blank"
+            ><i class="fab fa-facebook"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
