--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <h4>Work Inquiry</h4>
             <p class="opacity-75">Let's work together</p>
           </div>
-          <div class="col"><a href="" class="btn btn-branding">Let’s talk here</a></div>
+          <div class="col right"><a href="" class="btn btn-branding">Let’s talk here</a></div>
         </div>
 
         <div class="d-flex justify-content-center">
