--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
       src="https://kit.fontawesome.com/82ecfd394a.js"
       crossorigin="anonymous"
     ></script>
-
-    <title>Portfolio</title>
+    <meta
+      name="description"
+      content="Patricia is a front-end engeneer based in Portugal"
+    />
+    <title>Front-end developer - Patricia Pereira</title>
   </head>
   <body>
     <nav
@@ -39,11 +42,17 @@
     >
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="images/logo.png" alt="" class="logo d-none d-md-block" />
+          <img
+            src="images/logo.png"
+            alt="Patricia Logo"
+            class="logo d-none d-md-block"
+            title="Homepage"
+          />
           <img
             src="images/small'logo.jpg"
-            alt=""
+            alt="Patricia Logo"
             class="logo-small d-block d-md-none"
+            title="Homepage"
           />
         </a>
         <button
@@ -63,16 +72,36 @@
         >
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-item nav-link active" href="index.html">Home</a>
+              <a
+                class="nav-item nav-link active"
+                href="index.html"
+                title="Homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-item nav-link" href="about.html">About</a>
+              <a
+                class="nav-item nav-link"
+                href="about.html"
+                title="About Patricia"
+                >About</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-item nav-link" href="work.html">Projects</a>
+              <a
+                class="nav-item nav-link"
+                href="work.html"
+                title="Patricia's works"
+                >Projects</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-item nav-link" href="contact.html">Contacts</a>
+              <a
+                class="nav-item nav-link"
+                href="contact.html"
+                title="Contact Patricia"
+                >Contacts</a
+              >
             </li>
           </ul>
         </div>
@@ -83,7 +112,11 @@
       <p>🖖 Hello, I am</p>
       <h1>Patricia Pereira</h1>
       <h2 class="mb-5">Front-end developer based in Portugal</h2>
-      <div><a href="about.html" class="btn btn-branding">Contact me</a></div>
+      <div>
+        <a href="contact.html" class="btn btn-branding" title="Contact me"
+          >Contact me</a
+        >
+      </div>
     </div>
     <p class="text-center m-5">
       Featured Project which my best projects be choice to show
@@ -105,7 +138,12 @@
             live in Bookmarksgrove right at the coast of the Semantics, a large
             language ocean. A small river named Duden flows by
           </p>
-          <a href="#" class="btn btn-branding-outline">Learn more</a>
+          <a
+            href="work.html"
+            title="Learn more about the project"
+            class="btn btn-branding-outline"
+            >Learn more</a
+          >
         </div>
       </div>
 
@@ -118,7 +156,12 @@
             live in Bookmarksgrove right at the coast of the Semantics, a large
             language ocean. A small river named Duden flows by
           </p>
-          <a href="#" class="btn btn-branding-outline">Learn more</a>
+          <a
+            href="work.html"
+            title="Learn more about the project"
+            class="btn btn-branding-outline"
+            >Learn more</a
+          >
         </div>
         <div class="col d-none d-lg-block">
           <img
@@ -145,37 +188,63 @@
             live in Bookmarksgrove right at the coast of the Semantics, a large
             language ocean. A small river named Duden flows by
           </p>
-          <a href="#" class="btn btn-branding-outline">Learn more</a>
+          <a
+            href="work.html"
+            title="Learn more about the project"
+            class="btn btn-branding-outline"
+            >Learn more</a
+          >
         </div>
       </div>
 
       <footer>
-
         <div class="contact-box row mb-5">
           <div class="col">
             <h4>Work Inquiry</h4>
             <p class="opacity-75">Let's work together</p>
           </div>
-          <div class="col right"><a href="" class="btn btn-branding">Let’s talk here</a></div>
+          <div class="col right">
+            <a href="contact.html" title="Contact Me" class="btn btn-branding"
+              >Let’s talk here</a
+            >
+          </div>
         </div>
 
         <div class="d-flex justify-content-center">
-          <a href="mailto:patricia@gmail.com" class="email-link">
+          <a
+            href="mailto:patricia@gmail.com"
+            class="email-link"
+            title="Email Patricia"
+          >
             patricia@gmail.com
           </a>
         </div>
 
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.instagram.com/patricia" target="_blank">
+          <a
+            href="https://www.instagram.com/patricia"
+            target="_blank"
+            title="Instagram Profile"
+          >
             <i class="fab fa-instagram"></i
           ></a>
           <a href="https://www.github.com/patricia" target="_blank">
-            <i class="fab fa-github"></i
+            <i class="fab fa-github" title="GitHub Profile"></i
           ></a>
           <a href="https://www.facebook.com/patricia" target="_blank"
-            ><i class="fab fa-facebook"></i
+            ><i class="fab fa-facebook" title="Facebook Profile"></i
           ></a>
         </div>
+
+        <p class="text-center mt-5 opacity-75">
+          This project was coded SheCodes, and it is
+          <a
+            href="https://github.com/catiabarroco/portfolio-project"
+            target="_blank"
+            class="text-dark"
+            >open-sourced</a
+          >🖖
+        </p>
       </footer>
     </div>
   </body>
